--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,7 @@ flutter:
     - assets/images/categorys/
     - assets/images/fruits/
     - assets/images/logo/
+    - assets/images/
     
 
   # An image asset can refer to one or more resolution-specific "variants", see
